# shepherd

./: .env.example  .justfile  .renovaterc.json5  Cargo.toml  README.md  rustfmt.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  renovate.yaml
src/: config.rs  features.rs  main.rs  routes.rs  tracing_setup.rs
src/fs/: walk.rs
