[package]
authors = ["Taylan Dogan <git@taylandogan.info>"]
name = "shepherd"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["http2", "json", "macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
axum-macros = "0.5.0"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
axum-prometheus = "0.10.0"
axum-tracing-opentelemetry = "0.33.0"
clap = { version = "4.5.54", features = ["derive", "env"] }
eyre = "0.6.12"
color-eyre = "0.6.5"
env_logger = "0.11.8"
envy = "0.4.2"
opentelemetry = { version = "0.31.0", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.31.0", features = [
    "metrics",
    "tonic",
    "trace",
    "logs",
    "grpc-tonic",
], optional = true }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "trace"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "time"] }
tokio-macros = "2.6.0"
tower = "0.5.3"
tracing = { version = "0.1.44", features = [
    "attributes",
    "release_max_level_info",
] }
tracing-core = "0.1.36"
tracing-futures = "0.2.5"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.32.1"
tracing-serde = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "fmt",
    "json",
    "std",
    "time",
    "tracing-log",
] }
lazy_static = "1.5.0"
arc-swap = "1.8.0"
opentelemetry-stdout = "0.31.0"
opentelemetry-appender-tracing = "0.31.1"

[features]
default = []

otlp = ["opentelemetry-otlp"]

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true
codegen-units = 1
